css minor changes

--- a/index.css
+++ b/index.css
@@ -27,6 +27,10 @@ img {
 p {
     padding: 10px;
     line-height: 24px;
+    font-size: 12px;
+    font-family: "inter", sans-serif;
+    font-weight: 400;
+   
 }
 
 nav {
@@ -36,7 +40,6 @@ nav {
     border-radius: 1px;
     background-color: white;
     border: none;
-    padding: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
